force-app/main/default/objects/Account/fields/POS_Code__c.field-meta.xml
<CustomField>
    <fullName>POS_Code__c</fullName>
    <label>POS Code</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>