force-app/main/default/objects/Account/fields/Product_Categories__c.field-meta.xml
<CustomField>
    <fullName>Product_Categories__c</fullName>
    <label>Product Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Men</fullName>
            </value>
            <value>
                <fullName>Women</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Shoes</fullName>
            </value>
            <value>
                <fullName>Perfume</fullName>
            </value>
            <value>
                <fullName>Kids</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>