force-app/main/default/objects/Account/fields/Store_Type__c.field-meta.xml
<CustomField>
    <fullName>Store_Type__c</fullName>
    <label>Store Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Designer</fullName>
            </value>
            <value>
                <fullName>Advanced Contemporary</fullName>
            </value>
            <value>
                <fullName>Contemporary</fullName>
            </value>
            <value>
                <fullName>Fashion Street</fullName>
            </value>
            <value>
                <fullName>Sportswear</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>