force-app/main/default/objects/Account/fields/Sub_Region__c.field-meta.xml
<CustomField>
    <fullName>Sub_Region__c</fullName>
    <label>Sub-Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>