force-app/main/default/objects/Account/fields/World_Region__c.field-meta.xml
<CustomField>
    <fullName>World_Region__c</fullName>
    <label>World Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>